--- a/onebitflix-front/package.json
+++ b/onebitflix-front/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-player": "^2.10.0",
     "reactstrap": "^9.2.3",
     "sass": "^1.50.1",
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "typescript": "^5"
